# mcp-demo

./: .env  README.md  README.md.
(old) financial-dataset-mcp/mcp-server/: pyproject.toml
(old) financial-dataset-mcp/mcp-server/src/custom_server/: financial_tools.py  main.py
(old) financial-dataset-mcp/tools-local-tests/: LocalFunctionsDefinition.ipynb
mcp-agent-endpoint/: 00_Create_scope.ipynb  agent.py  langgraph-mcp-tool-calling-agent.ipynb
mcp-server/: pyproject.toml
mcp-server/src/custom_server/: app.py  boilerplate_tools.py  financial_tools.py
mcp-server/src/custom_server/static/: index.html
tools-local-tests/: FunctionsTesting.ipynb  LocalFunctionsDefinition.ipynb
yf-mcp-server/: pyproject.toml
yf-mcp-server/src/custom_server/: app.py  financial_tools.py
yf-tests/: LocalFunctionsDefinition.ipynb  requirements.txt
