[project]
name = "custom-server"
version = "0.1.0"
description = "Example custom MCP server on Databricks Apps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.10.0",
    "uvicorn>=0.34.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
[project.scripts]
custom-server = "custom_server.main:main"